2003-05-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/tutorial.itely: updates

2003-05-15  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-mode.el: Allow Midi on buffer.

2003-05-14  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/tutorial.itely: updates.

2003-05-14  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-mode.el: Show messages in one line only, as in XEmacs.

2003-05-13  Juergen Reuter  <reuter@ipd.uka.de>

	* lily/coherent-ligature-engraver.cc: fixed typo

	* lily/coherent-ligature-engraver.cc,
	lily/gregorian-ligature-engraver.cc,
	lily/ligature-bracket-engraver.cc, lily/ligature-engraver.cc,
	lily/mensural-ligature-engraver.cc, lily/note-heads-engraver.cc,
	lily/vaticana-ligature-engraver.cc,
	lily/include/ligature-engraver.hh, ly/gregorian-init.ly,
	scm/grob-description.scm: cleanup: junked LigatureHead grob and
	removed all ligature specific stuff from NoteHead code

	* lily/ligature-head.cc, lily/include/ligature-head.hh: removed;
	ligatures now use regular noteheads

	* lily/vaticana-ligature.cc: tiny code cleanups

	* lily/vaticana-ligature-engraver.cc: bugfix: insert additional
	space between two adjacent noteheads of the same pitch

	* scm/grob-description.scm: bugfix: VaticanaLigature: interface
	description; cleanup: removed obsolete font-family settings

2003-05-11  Juergen Reuter  <reuter@ipd.uka.de>

	* lily/coherent-ligature-engraver.cc,
	lily/gregorian-ligature-engraver.cc,
	lily/ligature-bracket-engraver.cc, lily/ligature-engraver.cc,
	lily/mensural-ligature-engraver.cc,
	lily/vaticana-ligature-engraver.cc,
	lily/include/gregorian-ligature-engraver.hh: updated for new
	Coherent_ligature_engraver; added comments that describe the basic
	design ideas of the ligature implementation

	* lily/coherent-ligature-engraver.cc,
	lily/include/coherent-ligature-engraver.hh: new file: shared code
	between mensural ligatures and Gregorian chant notation ligatures

2003-05-11  Heikki Junes  <hjunes@cc.hut.fi>
